# wayback-machine-archiver

./: .gitignore  .travis.yml  CLAUDE.md  LICENSE  Makefile  README.md  archiver.py  pyproject.toml  requirements.txt  run_test.sh  setup.py
.github/workflows/: ci.yml  release.yml  tests.yml
github-pages-archiver/: archiver.py
github_pages_archiver/: archiver.py
src/wayback_machine_archiver/: __init__.py  __main__.py  archiver.py  cli.py  clients.py  sitemaps.py  workflow.py
tests/: test_call_archiver.py  test_cli.py  test_download_remote_sitemap.py  test_extract_pages_from_sitemap.py  test_format_archive_url.py  test_get_namespace.py  test_load_local_sitemap.py  test_main_logic.py  test_process_sitemaps.py  test_sitemap_is_local.py  test_spn2_client.py  test_spn2_workflow.py
wayback_machine_archiver/: archiver.py
