[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wayback-machine-archiver"
version = "4.0.0"
description = "A Python script to submit web pages to the Wayback Machine for archiving."
readme = "README.md"
authors = [
    { name = "Alexander Gude", email = "alex.public.account@gmail.com" },
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
keywords = ["Internet Archive", "Wayback Machine"]
dependencies = [
    "defusedxml",
    "python-dotenv",
    "requests",
    "urllib3",
]

[project.urls]
Homepage = "https://github.com/agude/wayback-machine-archiver"

[project.scripts]
archiver = "wayback_machine_archiver.archiver:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests-mock",
    "bump-my-version",
    "types-defusedxml",
    "ruff",
]

[tool.bumpversion]
current_version = "4.0.0"
commit = true
tag = true
message = "Bump version to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/wayback_machine_archiver/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "G"]
ignore = ["E501"]
